--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
   <groupId>me.omegaweapondev</groupId>
   <artifactId>omeganames</artifactId>
   <name>OmegaNames</name>
-  <version>1.0.4</version>
+  <version>1.1.0</version>
   <description>Allow players to choose their own namecolours!</description>
 
   <!--
@@ -39,7 +39,7 @@
     <!--
       Set the Spigot API Version to stop backwards compatibility checks.
     -->
-    <pl.apiver>1.15</pl.apiver>
+    <pl.apiver>1.13</pl.apiver>
 
     <!-- The Java version your plugin uses, see bstats.org for what most servers have and use that -->
     <java.version>1.8</java.version>
@@ -73,6 +73,10 @@
       <id>placeholderapi</id>
       <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
     </repository>
+    <repository>
+      <id>CodeMC</id>
+      <url>https://repo.codemc.org/repository/maven-public</url>
+    </repository>
   </repositories>
 
   <!--
@@ -89,7 +93,7 @@
       <artifactId>spigot-api</artifactId>
 
       <!-- Change this to the latest version to stay up to date -->
-      <version>1.15.2-R0.1-SNAPSHOT</version>
+      <version>1.16.1-R0.1-SNAPSHOT</version>
 
       <!--
         The scope indicates if this library should be packaged together with our plugin
@@ -109,7 +113,7 @@
     <dependency>
       <groupId>me.ou</groupId>
       <artifactId>library</artifactId>
-      <version>1.3.0</version>
+      <version>1.4.0</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
@@ -117,6 +121,12 @@
       <artifactId>placeholderapi</artifactId>
       <version>2.10.6</version>
       <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.bstats</groupId>
+      <artifactId>bstats-bukkit</artifactId>
+      <version>1.7</version>
+      <scope>compile</scope>
     </dependency>
   </dependencies>
 
@@ -147,6 +157,10 @@
             <relocation>
               <pattern>me.ou.library</pattern>
               <shadedPattern>${project.groupId}.${project.artifactId}.library</shadedPattern>
+            </relocation>
+            <relocation>
+              <pattern>org.bstats</pattern>
+              <shadedPattern>${project.groupId}.${project.artifactId}.bstats</shadedPattern>
             </relocation>
           </relocations>
         </configuration>
