--- a/src/main/resources/playerData.yml
+++ b/src/main/resources/playerData.yml
@@ -3,6 +3,6 @@
 #  Welcome to OmegaNames' Player Data file.
 #
 #  This file contains all the uuids and namecolour colours
-#  for all the players who have the permission omeganames.login
+#  for all the players who have the permission omeganames.namecolour.login
 #
 # -------------------------------------------------------------------------------------------
