--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
   <groupId>me.omegaweapondev</groupId>
   <artifactId>omeganames</artifactId>
   <name>OmegaNames</name>
-  <version>1.1.17</version>
+  <version>1.1.18</version>
   <description>Allow players to choose their own namecolours!</description>
 
   <!--
@@ -77,6 +77,10 @@
       <id>CodeMC</id>
       <url>https://repo.codemc.org/repository/maven-public</url>
     </repository>
+    <repository>
+      <id>jitpack.io</id>
+      <url>https://jitpack.io</url>
+    </repository>
   </repositories>
 
   <!--
@@ -127,6 +131,12 @@
       <artifactId>bstats-bukkit</artifactId>
       <version>1.7</version>
       <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.github.MilkBowl</groupId>
+      <artifactId>VaultAPI</artifactId>
+      <version>1.7</version>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 
