--- a/src/main/resources/playerData.yml
+++ b/src/main/resources/playerData.yml
@@ -1,8 +1,8 @@
 # -------------------------------------------------------------------------------------------
 #
-#  Welcome to OmegaNames' Player Data file.
+#  Welcome to Stylizer's Player Data file.
 #
 #  This file contains all the uuids and namecolour colours
-#  for all the players who have the permission omeganames.namecolour.login
+#  for all the players who have the permission stylizer.namecolour.login
 #
 # -------------------------------------------------------------------------------------------
