--- a/pom.xml
+++ b/pom.xml
@@ -13,10 +13,10 @@
     The Version is current version of your plugin. You want to update this continuously.
   -->
   <groupId>me.omegaweapondev</groupId>
-  <artifactId>omeganames</artifactId>
-  <name>OmegaNames</name>
-  <version>1.1.22</version>
-  <description>Allow players to choose their own namecolours!</description>
+  <artifactId>stylizer</artifactId>
+  <name>Stylizer</name>
+  <version>2.0.0</version>
+  <description>Stylize different aspects of the server!</description>
 
   <!--
     Configure some of the Maven settings. We also define our new variables here such as the main class
@@ -28,7 +28,7 @@
       The full path to your plugin's main class, so that Spigot can find and load it.
       This is used in the plugin.yml for automatic input into the file.
     -->
-    <main.class>me.omegaweapondev.omeganames.OmegaNames</main.class>
+    <main.class>me.omegaweapondev.stylizer.Stylizer</main.class>
 
     <!--
       Listing the Author or Authors of the plugin. Use in the plugin.yml file.
