--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
   <groupId>me.omegaweapondev</groupId>
   <artifactId>stylizer</artifactId>
   <name>Stylizer</name>
-  <version>2.0.15</version>
+  <version>2.0.19</version>
   <description>Stylize different aspects of the server!</description>
 
   <!--
@@ -42,15 +42,22 @@
     <pl.apiver>1.13</pl.apiver>
 
     <!-- The Java version your plugin uses, see bstats.org for what most servers have and use that -->
-    <java.version>11.0</java.version>
+    <java.version>16</java.version>
 
     <!-- How letters in your code should be saved on your disk, leave to UTF-8 to support all languages -->
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
     <!-- Used to force the compiler to use Java JDK 1.8. Can be left out if the IDE has been setup correctly. -->
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
+    <maven.compiler.source>16</maven.compiler.source>
+    <maven.compiler.target>16</maven.compiler.target>
   </properties>
+
+  <pluginRepositories>
+    <pluginRepository>
+      <id>apache.snapshots</id>
+      <url>https://repository.apache.org/snapshots/</url>
+    </pluginRepository>
+  </pluginRepositories>
 
   <!--
     Configure where should Maven look for other libraries and plugins we
@@ -97,7 +104,7 @@
       <artifactId>spigot-api</artifactId>
 
       <!-- Change this to the latest version to stay up to date -->
-      <version>1.16.5-R0.1-SNAPSHOT</version>
+      <version>1.17-R0.1-SNAPSHOT</version>
 
       <!--
         The scope indicates if this library should be packaged together with our plugin
@@ -152,7 +159,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
-        <version>3.2.1</version>
+        <version>3.3.0-SNAPSHOT</version>
         <executions>
           <execution>
             <phase>package</phase>
